# RandomPeople

./: .gitignore  LICENSE  README.md  RandomPeople.spec  hook-PySide6.py  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  start.py  tailwind.config.js  tsconfig.json
public/: sample.csv  sample.json  sample.txt
src/: main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/ui/: button.tsx  confirm-dialog.tsx  toast.tsx
src/config/: constants.py  settings.py
src/hooks/: useToast.ts
src/lib/: config.ts  crypto.ts  fileStorage.ts  indexedDBStorage.ts  officialStore.ts  storageManager.ts  tauri.ts  utils.ts
src/types/: index.ts  tauri.d.ts
src/ui/: main_window.py  settings_dialog.py
src/ui/styles/: resources.py  resources.qrc  themes.py
src/ui/widgets/: number_display.py
src/utils/: animation.py  data_parser.py  log_utils.py  lottery_engine.py  validator.py
