[package]
name = "starrandom"
version = "1.0.7"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "star_random_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [
    "wry",
    "devtools"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
window-shadows = "0.2"
window-vibrancy = "0.6"
toml = "0.8"
toml_edit = "0.22"
tauri-plugin-window-state = { version = "2.0" }
tauri-plugin-shell = { version = "2.0" }
tauri-plugin-dialog = { version = "2.0" }
tauri-plugin-store = { version = "2.0" }
chrono = "0.4"
log = "0.4"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/protocol-asset"]

# 启用更多优化
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
